[gd_scene load_steps=2 format=3 uid="uid://d0w7k71yfn8e6"]

[ext_resource type="Script" path="res://Scenes/User Interface/OperationTable/fixable_item_operation_ui.gd" id="1_eih0x"]

[node name="Item" type="HBoxContainer"]
script = ExtResource("1_eih0x")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="ProductName" type="RichTextLabel" parent="VBoxContainer"]
layout_mode = 2
bbcode_enabled = true
text = "Nama Produk: X
"
fit_content = true
scroll_active = false

[node name="ProductKendala" type="RichTextLabel" parent="VBoxContainer"]
layout_mode = 2
bbcode_enabled = true
text = "Kendala: Lorem Ipsum
"
fit_content = true
scroll_active = false

[node name="VBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_direction = 2
layout_mode = 2

[node name="RichTextLabel2" type="RichTextLabel" parent="VBoxContainer/VBoxContainer"]
clip_contents = false
layout_mode = 2
size_flags_horizontal = 3
bbcode_enabled = true
text = "Part:
"
fit_content = true
scroll_active = false

[node name="PartName" type="VBoxContainer" parent="VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 4.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 2

[node name="ButtonAtur" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
text = "Atur"

[node name="ButtonAmbil" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
text = "Ambil"
